--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     </div>
     <form class="main__form" method="post">
       <div class="login-block">
-        <div class="input-name">Email/Телефон/WhatsApp</div>
+        <label for="input-login" class="input-name">Email/Телефон/WhatsApp</label>
         <div class="block__input">
-          <input class="input_value" type="text" name="Email/Телефон/WhatsApp" value="mars@gmail.com" />
+          <input class="input_value" id="input-login" type="text" name="Email/Телефон/WhatsApp" value="....." />
         </div>
       </div>
       <div class="password-block">
         <div class="password-block-name">
-          <div class="input-name">Пароль</div>
+          <label for="input-password" class="input-name">Пароль</label>
           <a class="password-block__link">Не знаете пароль?</a>
         </div>
         <div class="password-block__input">
           <input class="input_value" id="input-password" type="password" value="password" />
-          <i class="far fa-eye" id="togglePassword" onclick="myFunction()"></i>
+          <i class="far fa-eye" id="togglePassword"></i>
         </div>
       </div>
       <button class="button">
@@ -40,6 +40,7 @@
         <i class="fas fa-arrow-right" id="arrow-right"></i>
     </form>
   </div>
+  <div class="push"></div>
   <footer class="footer">Copyright © 2023 HR-Link</footer>
   <script>
     let eyeIcon = document.getElementById("togglePassword");
