--- a/index.html
+++ b/index.html
@@ -14,34 +14,33 @@
   <header class="header">
     <h1>Войти в HR-Link</h1>
   </header>
-  <div class="main">
-    <div class="main__image">
+  <main>
+    <div class="image">
       <img src="./img.jpg" alt="log-in-picture" />
     </div>
-    <form class="main__form" method="post">
-      <div class="login-block">
-        <label for="input-login" class="input-name">Email/Телефон/WhatsApp</label>
-        <div class="block__input">
-          <input class="input_value" id="input-login" type="text" name="Email/Телефон/WhatsApp" value="....." />
+
+    <form class="login-form" method="post">
+      <div class="login-form__block1">
+        <div class="login-form__block">
+          <label for="input-login" class="login-form__input-title">Email/Телефон/WhatsApp</label>
+          <input class="login-form__input" id="input-login" type="text" name="Email/Телефон/WhatsApp" value="....." />
         </div>
-      </div>
-      <div class="password-block">
-        <div class="password-block-name">
-          <label for="input-password" class="input-name">Пароль</label>
-          <a class="password-block__link">Не знаете пароль?</a>
-        </div>
-        <div class="password-block__input">
-          <input class="input_value" id="input-password" type="password" value="password" />
+        <div class="login-form__block">
+          <label for="input-password" class="login-form__input-title">Пароль</label>
+          <a class="login-form__password-link">Не знаете пароль?</a>
+          <input class="login-form__input" id="input-password" type="password" value="password" />
           <i class="far fa-eye" id="togglePassword"></i>
         </div>
-      </div>
-      <button class="button">
-        <span class="button-name">Войти</span>
-        <i class="fas fa-arrow-right" id="arrow-right"></i>
+        <button class="login-form__button">
+          <span class="login-form__button-name">Войти</span>
+          <i class="fas fa-arrow-right" id="arrow-right"></i>
+        </button>
     </form>
-  </div>
+
+  </main>
   <div class="push"></div>
   <footer class="footer">Copyright © 2023 HR-Link</footer>
+
   <script>
     let eyeIcon = document.getElementById("togglePassword");
     eyeIcon.addEventListener('click', changeTypeOfInput)
