--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
     <div class="image">
       <img src="./img.jpg" alt="log-in-picture" />
     </div>
-
     <form class="login-form" method="post">
-      <div class="login-form__block1">
-        <div class="login-form__block">
-          <label for="input-login" class="login-form__input-title">Email/Телефон/WhatsApp</label>
-          <input class="login-form__input" id="input-login" type="text" name="Email/Телефон/WhatsApp" value="....." />
-        </div>
-        <div class="login-form__block">
-          <label for="input-password" class="login-form__input-title">Пароль</label>
-          <a class="login-form__password-link">Не знаете пароль?</a>
-          <input class="login-form__input" id="input-password" type="password" value="password" />
-          <i class="far fa-eye" id="togglePassword"></i>
-        </div>
-        <button class="login-form__button">
-          <span class="login-form__button-name">Войти</span>
-          <i class="fas fa-arrow-right" id="arrow-right"></i>
-        </button>
+      <div class="login-form__block">
+        <label for="input-login" class="login-form__input-title">Email/Телефон/WhatsApp</label>
+        <input class="login-form__input" id="input-login" type="text" name="Email/Телефон/WhatsApp" value=""
+          placeholder="....." />
+      </div>
+      <div class="login-form__block">
+        <label for="input-password" class="login-form__input-title">Пароль</label>
+        <a class="login-form__password-link">Не знаете пароль?</a>
+        <input class="login-form__input" id="input-password" type="password" value="" placeholder="****" />
+        <i class="far fa-eye" id="togglePassword"></i>
+      </div>
+      <button class="login-form__button">
+        <span class="login-form__button-name">Войти</span>
+        <i class="fas fa-arrow-right" id="arrow-right"></i>
+      </button>
     </form>
-
   </main>
   <div class="push"></div>
   <footer class="footer">Copyright © 2023 HR-Link</footer>
